tests/integration/traits/errors/duplicate-impl-method/main.cx
trait C {
  c: self
}

impl C Number {
  c = 1
  c = 2
}
